Fixed header dropdown content not showing, added Nibras lesson navigation and header logo linking back to home page

--- a/stylesheets/common/header.css
+++ b/stylesheets/common/header.css
@@ -26,6 +26,12 @@ body {
     padding-right: 10px;
 }
 
+#logo-div a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+}
+
 #header-logo {
     height: calc(var(--header-height) - 2 * var(--logo-div-margin));
     width: calc(var(--header-height) - 2 * var(--logo-div-margin));
